...
          iconLeft="cached"
          value={syncWithSystem}
          onPress={onToggleSystem}
          title={t('syncWithSystem')}
        />
        <SwitchItem
          testID="dark-mode"
          iconLeft="theme-light-dark"
          disabled={syncWithSystem}
          value={darkMode}
          onPress={onToggleDark}
          title={t('darkMode')}
        />
        <List.Accordion
          left={() => <List.Icon icon="palette" />}
          title={t('theme')}
          testID="accordion"
          description={t(color)}>
          {Object.keys(themes).map(renderThemeItem)}
        </List.Accordion>
      </List.Section>
    </ScreenTemplate>
  );
...
